# warship-v2

./: .dockerignore  .gitignore  1_TSR_Prep.py  5_Warehouse.py  CARRIER_COST_ANALYSIS.md  CLAUDE.md  DEVELOPER_GUIDE.md  Dockerfile  README.md  TRUCK_LOAD_MAP_SPEC.md  database.py  deploy.sh  github_commands.txt  main.py  pyproject.toml  weather_analysis.py
.github/agents/: devops.agent.md  implementer.agent.md  planner.agent.md  project-manager.agent.md  reviewer.agent.md  senior_lead_architect.md  warship_PM.agent.md
docs/: SRS.md  architectural.md
raw/: Site_Status_04-30-2026_039428.csv
raw_data/: X_product_3y.csv  lmi_scores.csv
raw_data/John/: Transp Type.xlsx  Unit Freight Cost.xlsx
raw_data/Mei/: AMJK Frt cost breakdown by plants.xlsx  All Plants Freight Cost Analysis.xlsx
raw_data/lmi/: lmi_Feb_2025.txt  lmi_apr_2025.txt  lmi_aug_2025.txt  lmi_dec_2025.txt  lmi_feb_2026.txt  lmi_jan_2025.txt  lmi_jan_2026.txt  lmi_jul_2025.txt  lmi_jun_2025.txt  lmi_mar_2025.txt  lmi_mar_2026.txt  lmi_may_2025.txt  lmi_nov_2025.txt  lmi_oct_2025.txt  lmi_sep_2025.txt
routers/: __init__.py  about.py  health.py  home.py  maintenance.py  shipping.py  tsr_prep.py  warehouse.py
schemas/: __init__.py  health.py  meeting_report.py  not_in_xfcma.py  shipped_product.py  shipping_status.py  top_customers.py  tsr_prep.py
scripts/: scrape_gas_prices.py
static/css/: custom.css
templates/: base.html
templates/about/: architectural.html  index.html  (+1 more)
utils/: extract_lmi_scores.py  inas400_pdf_parser.py  product_forecast.py  product_trend.py  product_trend_service.py
(+27 files in other folders)
