[project]
name = "warship-v2"
version = "0.1.0"
description = "Warehouse and Shipping Management System"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.133.1",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "mysql-connector-python>=9.6.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pygments>=2.19.2",
    "sqlalchemy>=2.0.47",
]
